@@ -146,7 +146,7 @@ public:
 	
 	virtual void disconnect() {
 		if(sock != INVALID_SOCKET) {
-			::shutdown(sock, SD_SEND); // Make sure we send FIN
+			::shutdown(sock, 1); // Make sure we send FIN (SD_SEND shutdown type...)
 			closesocket(sock);
 		}
 		connected = false;
@@ -186,6 +186,10 @@ public:
 	virtual void write(const string& aData) throw(SocketException) {
 		write(aData.data(), aData.length());
 	}
+	virtual void writeTo(const string& ip, short port, const char* buffer, int len) throw(SocketException);
+	virtual void writeTo(const string& ip, short port, const string& aData) throw(SocketException) {
+		writeTo(ip, port, aData.data(), aData.length());
+	}
 
 	bool isConnected() { return connected; };
 
@@ -212,27 +216,7 @@ public:
 		return Util::emptyString;
 	}
 
-	static string resolve(const string& aDns) {
-		sockaddr_in sock_addr;
-
-		memset(&sock_addr, 0, sizeof(sock_addr));
-		sock_addr.sin_port = 0;
-		sock_addr.sin_family = AF_INET;
-		sock_addr.sin_addr.s_addr = inet_addr(aDns.c_str());
-	
-		if (sock_addr.sin_addr.s_addr == INADDR_NONE) {   /* server address is a name or invalid */
-			hostent* host;
-			host = gethostbyname(aDns.c_str());
-			if (host == NULL) {
-				return Util::emptyString;
-			}
-			sock_addr.sin_addr.s_addr = *((u_int32_t*)host->h_addr);
-			return inet_ntoa(sock_addr.sin_addr);
-		} else {
-			return aDns;
-		}
-	}
-
+	static string resolve(const string& aDns);
 	static void resetStats() { stats.up = stats.down = 0; };
 	static u_int32_t getDown() { return stats.down; };
 	static u_int32_t getUp() { return stats.up; };
@@ -264,6 +248,6 @@ private:
 
 /**
  * @file Socket.h
- * $Id: Socket.h,v 1.36 2002/05/23 21:48:23 arnetheduck Exp $
+ * $Id: Socket.h,v 1.37 2002/05/25 16:10:16 arnetheduck Exp $
  */
 
